[package]
name = "sanity"
version = "0.1.0"
authors = ["Emory Petermann <emory@onlyfor.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks", "tiles"]}
amethyst_utils = "0.15.3"
log = { version = "0.4.8", features = ["serde"] }
rand = "0.7.3"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
