[package]
name = "editor"
version = "0.1.0"
authors = ["Emory Petermann <emory@onlyfor.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanity-lib = { path = "../sanity-lib" }
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks", "tiles"]}
rand = "0.8.3"
nfd = "0.0.4"
ron = "0.6.2"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
