[package]
name = "sanity"
version = "0.1.0"
authors = ["Emory Petermann <emory@onlyfor.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanity-lib = { path = "../sanity-lib" }
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks", "tiles"]}
direction = {version = "0.17.10", features = ["rand"]}
log = { version = "0.4.11", features = ["serde"] }
rand = "0.8.5"
ron = "0.6.2"
serde = "1.0.117"
wfc = "0.9.2"
bracket-pathfinding = "0.8.1"
strum = "0.19.5"
strum_macros = "0.20.1"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
