[package]
name = "sanity-lib"
version = "0.1.0"
authors = ["Emory Petermann <emory@onlyfor.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.3"
bracket-pathfinding = "0.8.1"
serde = "1.0.117"
strum = "0.20.0"
strum_macros = "0.19.4"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
